<resources>
    <string name="app_name">Dux Scholar</string>

    <string name="contentdescription_back">Voltar</string>
    <string name="contentdescription_nothing">Nada para apresentar por agora.</string>

    <string name="carteirinhaactivity_missing"><i>Sua carteirinha ainda não foi emitida.</i></string>
    <string name="carteirinhaactivity_description">Apresente as seguinte imagem em cinemas, shows ou eventos para usufruir de seus benefícios estudantis.</string>

    <string-array name="calendaractivity_weekdaylabels">
        <item>Seg</item>
        <item>Ter</item>
        <item>Qua</item>
        <item>Qui</item>
        <item>Sex</item>
        <item>Sáb</item>
        <item>Dom</item>
    </string-array>

    <string-array name="calendaractivity_monthlabels">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>

    <string name="loginactivity_title">Entre na sua Conta Institucional</string>
    <string name="loginactivity_hint_email">E-mail</string>
    <string name="loginactivity_hint_password">Senha</string>
    <string name="loginactivity_button">Entrar</string>

    <string name="mainactivity_greet">Olá, %s</string>
    <string name="mainactivity_allnews_link"><u><i>Ver todas...</i></u></string>
    <string name="mainactivity_moreservices_link"><u><i>Mais serviços...</i></u></string>
    <string name="mainactivity_quicknews">Notícias Rápidas</string>

    <string name="newsactivity_readmore">Ler Mais >></string>

    <string name="servicesactivity_title">Informações Acadêmicas</string>

    <string name="configactivity_title">Configurações de Conta</string>
    <string name="configactivity_hint_nome">Nome</string>
    <string name="configactivity_hint_email">E-mail</string>
    <string name="configactivity_hint_newpassword">Nova Senha</string>
    <string name="configactivity_hint_repnewpassword">Repetir Nova Senha</string>
    <string name="configactivity_hint_pfp">Alterar Foto</string>
    <string name="configactivity_submitchanges">Aplicar Alterações</string>
    <string name="configactivity_logout">Sair</string>

    <string name="studentprofileactivity_datalist">Status:\nRA:\nCurso:\nSemestre:\nTurno:</string>
    <string name="studentprofileactivity_datatitle">DADOS DO ALUNO -\n%s</string>

    <string name="studentscheduleactivity_title">Horários</string>
    <string name="studentscheduleactivity_no_classes">Não há aulas para este dia.</string>

    <string name="editpt2activity_title_editing">EDITANDO %s</string>
    <string name="editpt2activity_prompt_insert">Inserir %s</string>
    <string name="editpt2activity_prompt_edit">Editar %s</string>

    <string name="hint_nome_full">Nome Completo <font color='#FC5653'>*</font></string>
    <string name="hint_nome">Nome <font color='#FC5653'>*</font></string>
    <string name="hint_email">E-mail <font color='#FC5653'>*</font></string>
    <string name="hint_ra">RA <font color='#FC5653'>*</font></string>
    <string name="hint_matricula">Matrícula <font color='#FC5653'>*</font></string>
    <string name="hint_tel">Telefone <font color='#FC5653'>*</font></string>
    <string name="hint_senha">Senha temporária <font color='#FC5653'>*</font></string>
    <string name="hint_curso">Curso <font color='#FC5653'>*</font></string>
    <string name="hint_prof">Professor <font color='#FC5653'>*</font></string>
    <string name="hint_title">Título <font color='#FC5653'>*</font></string>
    <string name="hint_header">Cabeçalho <font color='#FC5653'>*</font></string>
    <string name="hint_content">Conteúdo <font color='#FC5653'>*</font></string>
    <string name="hint_identifier">Identificador <font color='#FC5653'>*</font></string>

    <string name="hint_markdown"><i>Use <a href="https://www.markdownguide.org/cheat-sheet/">Markdown</a> para estilizar o seu texto.</i></string>

    <string name="hint_dropdown_course">%1$s (%2$s)</string>

    <string name="hint_btn_change">Alterar</string>
    <string name="hint_btn_choose">Selecionar</string>
</resources>