<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtProfPromptTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/editpt2activity_prompt_insert"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtxtProfFullName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/hint_nome_full"
            android:inputType="text|textPersonName"
            android:maxLines="1"
            android:singleLine="false"
            android:tag="required"
            android:textColor="@color/textColor"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtlblProfProfilePic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:labelFor="@id/btnProfProfilePic"
            android:text="Foto de Perfil"
            android:textAlignment="center"
            android:textColor="@color/textColor" />

        <Button
            android:id="@+id/btnProfProfilePic"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_import_button"
            android:elevation="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/hint_btn_choose"
            android:textColor="@color/textColor"
            app:backgroundTint="@null"
            app:icon="@drawable/ic_image_upload"
            app:iconSize="24dp"
            app:iconTint="#A9A8AA" />

        <EditText
            android:id="@+id/edtxtProfEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/hint_email"
            android:inputType="text|textEmailAddress"
            android:justificationMode="inter_word"
            android:maxLines="1"
            android:singleLine="false"
            android:tag="required"
            android:textColor="@color/textColor"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtxtProfMatricula"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/hint_matricula"
            android:inputType="number"
            android:justificationMode="inter_word"
            android:maxLines="1"
            android:singleLine="false"
            android:tag="required"
            android:textColor="@color/textColor"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtxtProfPhone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/hint_tel"
            android:inputType="phone"
            android:justificationMode="inter_word"
            android:maxLines="1"
            android:singleLine="false"
            android:tag="required"
            android:textColor="@color/textColor"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtxtProfTempPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/hint_senha"
            android:inputType="text|textVisiblePassword"
            android:justificationMode="inter_word"
            android:maxLines="1"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:tag="required"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            android:verticalScrollbarPosition="right" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>