<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <ImageButton
        android:id="@+id/btnConfigClose"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="#00FFFFFF"
        android:contentDescription="Botão voltar"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtConfigHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/configactivity_title"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtxtConfigNewPass"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="82dp"
        android:ems="10"
        android:hint="@string/configactivity_hint_newpassword"
        android:inputType="text|textPassword"
        android:maxLines="1"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConfigHeader" />

    <EditText
        android:id="@+id/edtxtConfigRepNewPass"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/configactivity_hint_repnewpassword"
        android:inputType="text|textPassword"
        android:maxLines="1"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtConfigNewPass" />

    <Button
        android:id="@+id/btnSubmitChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_default_button"
        android:text="@string/configactivity_submitchanges"
        android:textColor="@color/textColor"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_check"
        app:iconSize="24dp"
        app:iconTint="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtConfigRepNewPass" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:background="@drawable/bg_logout"
        android:text="@string/configactivity_logout"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_arrow_back"
        app:iconSize="24dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>