<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/editpt2activity_prompt_insert"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtxtServTitle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_title"
            android:inputType="textMultiLine"
            android:lines="1"
            android:singleLine="false"
            android:tag="required"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtlblServIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:labelFor="@id/btnStuProfilePic"
            android:text="Ícone do Serviço"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnServIcon"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_import_button"
            android:elevation="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/hint_btn_choose"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            app:icon="@drawable/ic_image_upload"
            app:iconSize="24dp"
            app:iconTint="#A9A8AA" />

        <EditText
            android:id="@+id/edtxtServContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/hint_content"
            android:inputType="textMultiLine"
            android:justificationMode="inter_word"
            android:maxLines="25"
            android:minLines="5"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:tag="required"
            android:textSize="14sp"
            android:verticalScrollbarPosition="right" />

    </LinearLayout>
</LinearLayout>