<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtDiscPromptTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/editpt2activity_prompt_insert"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edtxtDiscName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/hint_nome"
            android:inputType="text"
            android:tag="required"
            android:textColor="@color/textColor"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txtlblDiscShift2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:labelFor="@id/rdgrpDiscShift"
            android:text="Turno"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            tools:ignore="MissingConstraints" />

        <RadioGroup
            android:id="@+id/rdgrpDiscShift"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdbtnMatutino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="Matutino"
                android:textColor="@color/textColor" />

            <RadioButton
                android:id="@+id/rdbtnVespertino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Vespertino"
                android:textColor="@color/textColor" />

            <RadioButton
                android:id="@+id/rdbtnNoturno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Noturno"
                android:textColor="@color/textColor" />

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/drpdwnDiscProf"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:tag="required">

            <AutoCompleteTextView
                android:id="@+id/actxtDiscProf"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/hint_prof"
                android:inputType="none"
                android:tag="professores"
                android:textColor="@color/textColor" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>