<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <com.example.duxscholar.TopBarView
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnChatbot"
        android:layout_width="350dp"
        android:layout_height="52dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/bg_input"
        android:drawableEnd="@drawable/ic_send_alt"
        android:text="Duque, seu assistente pessoal"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:iconSize="48dp"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgDuqueIcon"
        android:layout_width="54dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="96dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_icon_duque" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/carouselRecyclerView"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChatbot" />

    <LinearLayout
        android:id="@+id/lnlytNewsHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carouselRecyclerView">

        <TextView
            android:id="@+id/txtNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginStart="24dp"
            android:text="@string/mainactivity_quicknews"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/textColor"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtMaisNews"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginStart="180dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/mainactivity_allnews_link"
            android:textAlignment="textEnd"
            android:textColor="@color/textLinkColor"
            android:textSize="12sp" />
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:scrollIndicators="none"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollbarSize="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnlytNewsHeader">

        <LinearLayout
            android:id="@+id/lnlytNews"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" />
    </HorizontalScrollView>

    <TextView
        android:id="@+id/txtNewsNothing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contentdescription_nothing"
        android:textColor="@color/minorTextColor"
        android:textStyle="italic"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/horizontalScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontalScrollView" />

    <TextView
        android:id="@+id/txtInfoAcademica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/servicesactivity_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <LinearLayout
        android:id="@+id/lnyltInfoAcademica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:minHeight="100dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInfoAcademica" />

    <TextView
        android:id="@+id/txtInfoAcNothing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contentdescription_nothing"
        android:textColor="@color/minorTextColor"
        android:textStyle="italic"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/lnyltInfoAcademica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lnyltInfoAcademica" />

    <TextView
        android:id="@+id/txtMaisServ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/mainactivity_moreservices_link"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/textLinkColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnyltInfoAcademica" />

    <com.example.duxscholar.NavbarView
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
